--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "firebase": "^6.0.4",
     "font-awesome": "^4.7.0",
